src/OLanguageParser.java
// Generated from grammar/OLanguage.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, WS=27, IdentifierToken=28, IntegerToken=29, RealToken=30;
	public static final int
		RULE_identifierToken = 0, RULE_isToken = 1, RULE_endToken = 2, RULE_extendsToken = 3, 
		RULE_openSquareBracketToken = 4, RULE_closeSquareBracketToken = 5, RULE_varToken = 6, 
		RULE_colonToken = 7, RULE_openParenthesisToken = 8, RULE_closeParenthesisToken = 9, 
		RULE_integerClassToken = 10, RULE_integerToken = 11, RULE_commaToken = 12, 
		RULE_dotToken = 13, RULE_thisToken = 14, RULE_assignToken = 15, RULE_methodToken = 16, 
		RULE_returnToken = 17, RULE_realClassToken = 18, RULE_realToken = 19, 
		RULE_whileToken = 20, RULE_loopToken = 21, RULE_booleanClassToken = 22, 
		RULE_ifToken = 23, RULE_thenToken = 24, RULE_elseToken = 25, RULE_trueToken = 26, 
		RULE_falseToken = 27, RULE_classToken = 28, RULE_program = 29, RULE_classDeclaration = 30, 
		RULE_className = 31, RULE_memberDeclaration = 32, RULE_variableDeclaration = 33, 
		RULE_methodDeclaration = 34, RULE_parameters = 35, RULE_parameterDeclaration = 36, 
		RULE_constructorDeclaration = 37, RULE_body = 38, RULE_statement = 39, 
		RULE_assignment = 40, RULE_whileLoop = 41, RULE_ifStatement = 42, RULE_returnStatement = 43, 
		RULE_expression = 44, RULE_arguments = 45, RULE_primary = 46, RULE_booleanLiteral = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifierToken", "isToken", "endToken", "extendsToken", "openSquareBracketToken", 
			"closeSquareBracketToken", "varToken", "colonToken", "openParenthesisToken", 
			"closeParenthesisToken", "integerClassToken", "integerToken", "commaToken", 
			"dotToken", "thisToken", "assignToken", "methodToken", "returnToken", 
			"realClassToken", "realToken", "whileToken", "loopToken", "booleanClassToken", 
			"ifToken", "thenToken", "elseToken", "trueToken", "falseToken", "classToken", 
			"program", "classDeclaration", "className", "memberDeclaration", "variableDeclaration", 
			"methodDeclaration", "parameters", "parameterDeclaration", "constructorDeclaration", 
			"body", "statement", "assignment", "whileLoop", "ifStatement", "returnStatement", 
			"expression", "arguments", "primary", "booleanLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'is'", "'end'", "'extends'", "'['", "']'", "'var'", "':'", "'('", 
			"')'", "'Integer'", "','", "'.'", "'this'", "':='", "'method'", "'return'", 
			"'Real'", "'while'", "'loop'", "'Boolean'", "'if'", "'then'", "'else'", 
			"'true'", "'false'", "'class'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "WS", "IdentifierToken", "IntegerToken", "RealToken"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierTokenContext extends ParserRuleContext {
		public TerminalNode IdentifierToken() { return getToken(OLanguageParser.IdentifierToken, 0); }
		public IdentifierTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierToken; }
	}

	public final IdentifierTokenContext identifierToken() throws RecognitionException {
		IdentifierTokenContext _localctx = new IdentifierTokenContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifierToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(IdentifierToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IsTokenContext extends ParserRuleContext {
		public IsTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_isToken; }
	}

	public final IsTokenContext isToken() throws RecognitionException {
		IsTokenContext _localctx = new IsTokenContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_isToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EndTokenContext extends ParserRuleContext {
		public EndTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endToken; }
	}

	public final EndTokenContext endToken() throws RecognitionException {
		EndTokenContext _localctx = new EndTokenContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_endToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExtendsTokenContext extends ParserRuleContext {
		public ExtendsTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extendsToken; }
	}

	public final ExtendsTokenContext extendsToken() throws RecognitionException {
		ExtendsTokenContext _localctx = new ExtendsTokenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_extendsToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpenSquareBracketTokenContext extends ParserRuleContext {
		public OpenSquareBracketTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openSquareBracketToken; }
	}

	public final OpenSquareBracketTokenContext openSquareBracketToken() throws RecognitionException {
		OpenSquareBracketTokenContext _localctx = new OpenSquareBracketTokenContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_openSquareBracketToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CloseSquareBracketTokenContext extends ParserRuleContext {
		public CloseSquareBracketTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closeSquareBracketToken; }
	}

	public final CloseSquareBracketTokenContext closeSquareBracketToken() throws RecognitionException {
		CloseSquareBracketTokenContext _localctx = new CloseSquareBracketTokenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_closeSquareBracketToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTokenContext extends ParserRuleContext {
		public VarTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varToken; }
	}

	public final VarTokenContext varToken() throws RecognitionException {
		VarTokenContext _localctx = new VarTokenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColonTokenContext extends ParserRuleContext {
		public ColonTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colonToken; }
	}

	public final ColonTokenContext colonToken() throws RecognitionException {
		ColonTokenContext _localctx = new ColonTokenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_colonToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpenParenthesisTokenContext extends ParserRuleContext {
		public OpenParenthesisTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openParenthesisToken; }
	}

	public final OpenParenthesisTokenContext openParenthesisToken() throws RecognitionException {
		OpenParenthesisTokenContext _localctx = new OpenParenthesisTokenContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_openParenthesisToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CloseParenthesisTokenContext extends ParserRuleContext {
		public CloseParenthesisTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closeParenthesisToken; }
	}

	public final CloseParenthesisTokenContext closeParenthesisToken() throws RecognitionException {
		CloseParenthesisTokenContext _localctx = new CloseParenthesisTokenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_closeParenthesisToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntegerClassTokenContext extends ParserRuleContext {
		public IntegerClassTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerClassToken; }
	}

	public final IntegerClassTokenContext integerClassToken() throws RecognitionException {
		IntegerClassTokenContext _localctx = new IntegerClassTokenContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_integerClassToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntegerTokenContext extends ParserRuleContext {
		public TerminalNode IntegerToken() { return getToken(OLanguageParser.IntegerToken, 0); }
		public IntegerTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerToken; }
	}

	public final IntegerTokenContext integerToken() throws RecognitionException {
		IntegerTokenContext _localctx = new IntegerTokenContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_integerToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IntegerToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommaTokenContext extends ParserRuleContext {
		public CommaTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaToken; }
	}

	public final CommaTokenContext commaToken() throws RecognitionException {
		CommaTokenContext _localctx = new CommaTokenContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_commaToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DotTokenContext extends ParserRuleContext {
		public DotTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dotToken; }
	}

	public final DotTokenContext dotToken() throws RecognitionException {
		DotTokenContext _localctx = new DotTokenContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_dotToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThisTokenContext extends ParserRuleContext {
		public ThisTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thisToken; }
	}

	public final ThisTokenContext thisToken() throws RecognitionException {
		ThisTokenContext _localctx = new ThisTokenContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_thisToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignTokenContext extends ParserRuleContext {
		public AssignTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignToken; }
	}

	public final AssignTokenContext assignToken() throws RecognitionException {
		AssignTokenContext _localctx = new AssignTokenContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_assignToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodTokenContext extends ParserRuleContext {
		public MethodTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodToken; }
	}

	public final MethodTokenContext methodToken() throws RecognitionException {
		MethodTokenContext _localctx = new MethodTokenContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_methodToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTokenContext extends ParserRuleContext {
		public ReturnTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnToken; }
	}

	public final ReturnTokenContext returnToken() throws RecognitionException {
		ReturnTokenContext _localctx = new ReturnTokenContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_returnToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealClassTokenContext extends ParserRuleContext {
		public RealClassTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realClassToken; }
	}

	public final RealClassTokenContext realClassToken() throws RecognitionException {
		RealClassTokenContext _localctx = new RealClassTokenContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_realClassToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealTokenContext extends ParserRuleContext {
		public TerminalNode RealToken() { return getToken(OLanguageParser.RealToken, 0); }
		public RealTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realToken; }
	}

	public final RealTokenContext realToken() throws RecognitionException {
		RealTokenContext _localctx = new RealTokenContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_realToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(RealToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileTokenContext extends ParserRuleContext {
		public WhileTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileToken; }
	}

	public final WhileTokenContext whileToken() throws RecognitionException {
		WhileTokenContext _localctx = new WhileTokenContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_whileToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopTokenContext extends ParserRuleContext {
		public LoopTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopToken; }
	}

	public final LoopTokenContext loopToken() throws RecognitionException {
		LoopTokenContext _localctx = new LoopTokenContext(_ctx, getState());
		enterRule(_localctx, 42, RULE_loopToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanClassTokenContext extends ParserRuleContext {
		public BooleanClassTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanClassToken; }
	}

	public final BooleanClassTokenContext booleanClassToken() throws RecognitionException {
		BooleanClassTokenContext _localctx = new BooleanClassTokenContext(_ctx, getState());
		enterRule(_localctx, 44, RULE_booleanClassToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfTokenContext extends ParserRuleContext {
		public IfTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifToken; }
	}

	public final IfTokenContext ifToken() throws RecognitionException {
		IfTokenContext _localctx = new IfTokenContext(_ctx, getState());
		enterRule(_localctx, 46, RULE_ifToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThenTokenContext extends ParserRuleContext {
		public ThenTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenToken; }
	}

	public final ThenTokenContext thenToken() throws RecognitionException {
		ThenTokenContext _localctx = new ThenTokenContext(_ctx, getState());
		enterRule(_localctx, 48, RULE_thenToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__21);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseTokenContext extends ParserRuleContext {
		public ElseTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseToken; }
	}

	public final ElseTokenContext elseToken() throws RecognitionException {
		ElseTokenContext _localctx = new ElseTokenContext(_ctx, getState());
		enterRule(_localctx, 50, RULE_elseToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrueTokenContext extends ParserRuleContext {
		public TrueTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trueToken; }
	}

	public final TrueTokenContext trueToken() throws RecognitionException {
		TrueTokenContext _localctx = new TrueTokenContext(_ctx, getState());
		enterRule(_localctx, 52, RULE_trueToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__23);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FalseTokenContext extends ParserRuleContext {
		public FalseTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_falseToken; }
	}

	public final FalseTokenContext falseToken() throws RecognitionException {
		FalseTokenContext _localctx = new FalseTokenContext(_ctx, getState());
		enterRule(_localctx, 54, RULE_falseToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__24);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassTokenContext extends ParserRuleContext {
		public ClassTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classToken; }
	}

	public final ClassTokenContext classToken() throws RecognitionException {
		ClassTokenContext _localctx = new ClassTokenContext(_ctx, getState());
		enterRule(_localctx, 56, RULE_classToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(OLanguageParser.EOF, 0); }
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 58, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__25) {
				{
				{
				setState(154);
				classDeclaration();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassTokenContext classToken() {
			return getRuleContext(ClassTokenContext.class,0);
		}
		public List<ClassNameContext> className() {
			return getRuleContexts(ClassNameContext.class);
		}
		public ClassNameContext className(int i) {
			return getRuleContext(ClassNameContext.class,i);
		}
		public IsTokenContext isToken() {
			return getRuleContext(IsTokenContext.class,0);
		}
		public EndTokenContext endToken() {
			return getRuleContext(EndTokenContext.class,0);
		}
		public ExtendsTokenContext extendsToken() {
			return getRuleContext(ExtendsTokenContext.class,0);
		}
		public List<MemberDeclarationContext> memberDeclaration() {
			return getRuleContexts(MemberDeclarationContext.class);
		}
		public MemberDeclarationContext memberDeclaration(int i) {
			return getRuleContext(MemberDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 60, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			classToken();
			setState(163);
			className();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(164);
				extendsToken();
				setState(165);
				className();
				}
			}
